styleSheet.css
:root {
  --on__primary: #fff;
  --on__backgrond: #fff;
  --light__primary: rgba(129, 129, 129, 1);
  --primary__color: rgba(50, 50, 50, 1);
  --dark__primary: rgba(17, 17, 17, 1);
  --secondary__color: rgba(76, 175, 80, 1);
  --background__color: #000; 
}

html {
  color: var(--on__backgrond);
  background-color: var(--background__color);
  font-size: calc(0.7em + 0.5vw);
  
}

body,
header,
#bodyResume {
  position: relative;
}

body {
  margin: 0;
}

header {
  z-index: 2;
}

section {
  position: relative;
  width: 100%;
}

ul { 
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#navBar {
  display: inline;
  position: fixed;
  width: 100%;
  /*25px for the padding and  0.7em + 0.5vw goes for the font-size on 'navBar__list > a'*/
  height: calc(26px + 0.7em + 0.5vw);
  top: 0;
  background-color: var(--primary__color);
}

.navBar__bgPicture {
  background-color: var(--dark__primary);
  color: var(--on__primary);
  height: 100%;
  position: relative;
  width: 15%;
}

.navBar__profilePic {
  border-radius: 50%;
  height: 90%;
  left: 7%;
  position: absolute;
  top: 5%;
}

.navBar__bgPicture > p {
  background-color: inherit;
  margin: unset;
  left: 5vw;
  padding: 0 3%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.navBar__ul {
  background-color: var(--primary__color);
  height: 100%;
  left: 50%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;  
  top: 0;
  transform: translateX(-50%);
  width: fit-content;
}

.navBar__list {
  float: left;
}

.navBar__list > a {
  color: var(--on__primary);
  display: block;
  padding: 14px 16px;
  text-align: center;
  text-decoration: none;
}

.navBar__list > a:hover {
  background-color: var(--dark__primary);
}

.navBar__list--active > a {
  color: var(--secondary__color);
}

.navBar__btn {
  background-color: var(--dark__primary);
  border: none;
  color: var(--on__primary);
  display: none;
  font-size: calc(1em + 3.5vw);
}

.navBar__closeBtn {
  color: var(--light__primary);
  position: absolute;
  right: 3%;
  display: none;
}

.navBar__CVbtn {
  display: block;
  font-size: calc(0.5em + 0.5vw);
  height: 100%;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  width: 15%;
}
.navBar__sidebarBtn {
  padding: 1px;
  position: fixed;
  width: 10%;
  left: 0;
  top: 0;
  opacity: 0.7;
}

#bodyResume {
  position: relative;
  margin-top: calc(26px + 0.7em + 0.5vw);
}

#home {
  height: 92vh;
}

.home__right {
  color: var(--white_100);
  left: 0;
  height: 100%;
  position: absolute;
  width: 75%;
}

.home__parallax {
  background-image: url('images/homeSection_backgroundImage.jpg');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.home__greeting {
  font-size: calc(0.8em + 1vw);
  left: 5%;
  position: inherit;
  top: 40%;  
}

.home__greeting > p,
.home__greeting > h1 {
  margin: 0;
}

.home__left {
  background-color: #333;
  color: var(--white_100);
  height: 100%;
  position: absolute;
  right: 0;
  text-align: center;
  width: 25%;
}

.home__profilePicture {
  border-radius: 50%; 
  margin: 5% 0 10% 30%;
  overflow: hidden;
  width: 40%
}

.home__profileName {
  font-size: calc(0.5em + 0.8vw);
  margin: 10% 0 10% 0;
}

.home__profilePicture > img {
  width: 100%
}

.home__academic {
  font-size: calc(0.1em + 0.9vw);  
  margin: 10% 0 10% 0;  
}

.home__network {
  margin: 10% 0 10% 0;
}

.home__downloadCV {
  font-size: calc(0.1em + 1vw);
  display: inline;
}

.network {
  display: inline-flex;
}

.network > li {
  margin: 5% 6px 0% 6px;
}

.network__icon {
  width: calc(0.6em + 1.2vw);
}

.network__icon > img {
  width: 100%;
}

@media only screen and (max-width: 1024px) and (min-height: 768px){
  #home {
    height: calc(60vh + 10vw);
  }
}

@media only screen and (max-width: 812px) and (min-width: 769px){
  #home {
    height: calc(60vh + 20vw);
  }
}


@media only screen and (max-width: 768px) {
  .navBar__sidebarBtn,
  .navBar__closeBtn,
  .navBar__btn{
    display: block;
  }

  #navBar {
    height: 100%;
    left: 0;
    overflow-x: hidden;
    position: fixed;
    top: 0;
    transition: 0.5s;
    width: 60vw;
    width: 0;
    z-index: 1;
  }

  .navBar__bgPicture {
    height: 25%;
    width: 100%;
    z-index: 1;
  }

  .navBar__profilePic {
    border-radius: 50%;
    height: 60%;
    left: 50%;
    transform: translateX(-50%);
  }

  .navBar__bgPicture > p {
    font-size: calc(0.9em + 2vw);
    left: 50%;
    text-align: center;
    top: 70%;
    transform: translateX(-50%);
    width: 100%;
  }
  
  .navBar__ul {
    height: 60%;
    top: 28%;
  }

  .navBar__list {
    width: 100%;
  }

  .navBar__list > a {
    display: block;
    font-size: calc(1em + 1.8vh);
    padding: 0 8px 8px 32px;
    text-align: left;
    text-decoration: none;
    transition: 0.3s;
  }

  .navBar__closeBtn .navBar__btn {
    background-color: inherit;
    color: inherit;
    margin-left: 82%;
  }

  #home {
    height: calc(65vh + 80vw);
  }

  .home__right {
    display: none;
  }

  .home__left {
    width: 100%;
  }

  .home__profilePicture {
    margin: 5% 0 0 35%;
    width: 30%;
  }

  .home__profileName {
    font-size: calc(1em + 2vw);
  }

  .home__academic {
    font-size: calc(0.7em + 1.5vw)
  }

  .home__network {
    font-size: calc(0.8em + 0.9vw);
    margin: 5% 0 3% 0;
  }

  .home__downloadCV {
    font-size: calc(0.6em + 1.3vw);
    display: inline;
  }
  .network__icon {
    width: calc(1.6em + 1.2vw);
  }
  .navBar__CVbtn {
    font-size: calc(0.6em + 2vw);
    height: 8vh;
    left: 50%;
    right: unset;
    top: 90%;
    transform: translateX(-50%);
    width: 55%;
  }

}

